2009-11-24  ebin <yutaka@ebine.org>

	* sabel/controller/Page.php: __get()と__set()をpublicに修正。
	* sabel/cache: キャッシュクラス内部でKVSパッケージを使用するように変更。

2009-11-24  ebin <yutaka@ebine.org>

	* sabel/db/Model.php: Sabel_Db_ModelにselectForUpdateメソッド追加。

2009-11-24  ebin <yutaka@ebine.org>

	* sabel/kvs: KVS(Key-Value-Store)パッケージの追加。

2009-11-23  hamaco  <hamanaka.kazuhiro@gmail.com>

	* Sabel.js (Sabel.Widget.Calendar): 色々と改善。
	* Sabel.js (Sabel.Element): insertPreviousSibling, insertNextSiblingメソッド追加。

2009-11-23  MoriReo <mori.reo@gmail.com>

	* sabel/Container.php: 設定クラスのbind->toにインスタンスを指定可能に変更。


2009-11-22  MoriReo <mori.reo@gmail.com>

	* sabel/Preference: パッケージを追加。

2009-11-21  Ebin <yutaka@ebine.org>

	* lib/Cache.php: lib/cache（キャッシュユーティリティ）を作成。

2009-11-19  Ebin <yutaka@ebine.org>

	* sabel/Functions.php: 削除し、sabel/functions/core.phpと
	sabel/functions/db.phpに分けた。

2009-11-18  Ebin <yutaka@ebine.org>

	* sabel/xml/Document.php: newできないように変更。

2009-11-17  Ebin <yutaka@ebine.org>

	* sabel/xml/*: 使い易さの改善。

2009-11-14  MoriReo <mori.reo@gmail.com>

	* sabel/Container.php: 名前付きでの設定インタフェイスを削除。コードの改善。

2009-11-13  Ebin <yutaka@ebine.org>

	* sabel/Bus.php: プロセッサINSERT用のメソッドinsertProcessor追加。

2009-11-12  MoriReo <mori.reo@gmail.com>

	* sabel/Container.php: Sabel_Containerのload()時に、複数の設定クラスを
	指定できるように変更。

2009-11-11  MoriReo <mori.reo@gmail.com>

	* sabel/Container.php: Sabel_AspectからStaticProxyを削除。

2009-11-10  Ebin <yutaka@ebine.org>

	* sabel/Functions.php: get_mime_type()関数追加。それに応じて
	Sabel_Mail_Mime_Html::addImage()のMIMEタイプを省略できるように変更。

2009-11-10  Ebin <yutaka@ebine.org>

	* generator/skeleton/en/lib/form/Object.php: toHidden()メソッド追加（フォームの
	値を全てhiddenで書き出す）

2009-11-09  Ebin <yutaka@ebine.org>

	* sabel/Functions.php: is_ipaddr()関数の正規表現を修正

2009-11-09  hamaco  <hamanaka.kazuhiro@gmail.com>

	* Sabel.js (Sabel.Event): getTargetメソッドの返り値をSabel.Elementに変更
